Update gitignore to exclude large files and venv

--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,8 @@ ENV/
 .venv
 env.bak/
 venv.bak/
+*.dylib
+*.so
 
 # IDE
 .idea/
@@ -92,9 +94,129 @@ figures/
 results/
 checkpoints/
 data/
+venv/
 *.pkl
 *.pt
 *.pth
 *.h5
 *.npy
-*.npz 
+*.npz
+*.dylib
+*.so
+*.tar.gz
+
+# Large files and directories
+*.tar.gz
+*.zip
+*.rar
+*.7z
+*.gz
+*.bz2
+*.xz
+*.tar
+*.tgz
+*.tbz
+*.txz
+*.tar.bz2
+*.tar.xz
+*.tar.bz
+*.tar.lz
+*.tar.lzma
+*.tar.lzo
+*.tar.lz4
+*.tar.lz5
+*.tar.lz6
+*.tar.lz7
+*.tar.lz8
+*.tar.lz9
+*.tar.lz10
+*.tar.lz11
+*.tar.lz12
+*.tar.lz13
+*.tar.lz14
+*.tar.lz15
+*.tar.lz16
+*.tar.lz17
+*.tar.lz18
+*.tar.lz19
+*.tar.lz20
+*.tar.lz21
+*.tar.lz22
+*.tar.lz23
+*.tar.lz24
+*.tar.lz25
+*.tar.lz26
+*.tar.lz27
+*.tar.lz28
+*.tar.lz29
+*.tar.lz30
+*.tar.lz31
+*.tar.lz32
+*.tar.lz33
+*.tar.lz34
+*.tar.lz35
+*.tar.lz36
+*.tar.lz37
+*.tar.lz38
+*.tar.lz39
+*.tar.lz40
+*.tar.lz41
+*.tar.lz42
+*.tar.lz43
+*.tar.lz44
+*.tar.lz45
+*.tar.lz46
+*.tar.lz47
+*.tar.lz48
+*.tar.lz49
+*.tar.lz50
+*.tar.lz51
+*.tar.lz52
+*.tar.lz53
+*.tar.lz54
+*.tar.lz55
+*.tar.lz56
+*.tar.lz57
+*.tar.lz58
+*.tar.lz59
+*.tar.lz60
+*.tar.lz61
+*.tar.lz62
+*.tar.lz63
+*.tar.lz64
+*.tar.lz65
+*.tar.lz66
+*.tar.lz67
+*.tar.lz68
+*.tar.lz69
+*.tar.lz70
+*.tar.lz71
+*.tar.lz72
+*.tar.lz73
+*.tar.lz74
+*.tar.lz75
+*.tar.lz76
+*.tar.lz77
+*.tar.lz78
+*.tar.lz79
+*.tar.lz80
+*.tar.lz81
+*.tar.lz82
+*.tar.lz83
+*.tar.lz84
+*.tar.lz85
+*.tar.lz86
+*.tar.lz87
+*.tar.lz88
+*.tar.lz89
+*.tar.lz90
+*.tar.lz91
+*.tar.lz92
+*.tar.lz93
+*.tar.lz94
+*.tar.lz95
+*.tar.lz96
+*.tar.lz97
+*.tar.lz98
+*.tar.lz99
+*.tar.lz100 
